# YT_DLP_QT

./: .gitignore  Config.py  DownloadItem.py  DownloadListModel.py  DownloadTableDelegate.py  Logger.py  MainUi.ui  MainUi_func.py  MainUi_ui.py  OptionsDialog.ui  OptionsDialog_func.py  OptionsDialog_ui.py  README.md  Worker.py  YTDLPQtHook.py  build_command.md  main.py  pyproject.toml  requirements.txt  resource.qrc  resource_rc.py  styles.qss
.github/workflows/: release.yml
resources/: resources.qrc  resources_rc.py
